[package]
name = "is_option"
version = "0.1.0"
authors = ["Tamo <tamo@meilisearch.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/irevoire/is_option"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
